
*****

Allowed entries to not have a title.
Added respective test for bm.search().
When an entry has no title, display 'NO_TITLE' in browser and search
bottom toolbars.
Added test to prevent identifying None titles as duplicates.


*****  Mi 13. Jan 15:29:55 CET 2021  *****

Removed title-not-found-error test (no longer needed).

*****

Stored number of entries in the examples/sample.bib file into
a variable.  To simplify further edits during testing.

*****

Allowed entries to not have a year.
Added entry with no year into examples/sample.bib for testing.
Added tests for Bib1 equal or lower than Bib2 when an entry has
no year.


*****  Do 14. Jan 18:29:27 CET 2021  *****

Allowed entries to not have an author.
Added entry with no author into examples/sample.bib for testing.
Added tests for Bib1 equal or lower than Bib2 when entries have
no author.

*****

Modified u.get_authors() to return an empty string when the input
is None.
Added respective tests.

*****

Added Exception to pm.guess_name() when entry does not have author
nor year (cannot guess an appropriate filename).
Added respective test.


*****  Fr 15. Jan 17:09:50 CET 2021  *****

Refactored year parsing in Bib.__init__() to allow years 0--999.

*****

Implemented u.warnings_format() to set a custom warnings format.
Modified Bib.__init__() to throw a warning instead of an exception
for a bad year format.
Added respective tests.

*****

Turned invalid-month exception into a warning.
Updated respective tests.

*****

Added key argument to u.parse_name() to display when raising warnings
Turned invalid-author format into too-many-commas warning.
Attemt to correct the entry when that's the case (guessing what
BibTeX does).
Added respective tests.

*****

Bumped bibmanager to version 1.3.1
The next merge should solve #47 #77 #78 #79


*****  Sat Jan 16 14:29:17 CET 2021  *****

Added youtube tutorial for version 1.3 into the docs.

*****

PEP8ed setup.py

*****

PEP8ed utils.py

*****

PEP8ed bib_manager.py
